# xreservation

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: config.rs  lib.rs  pager.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: mod.rs  reservation.rs
abi/src/types/: mod.rs  request.rs  reservation.rs  reservation_filter.rs  reservation_query.rs  reservation_status.rs
migrations/: 20230525142727_init.up.sql  20230526054703_reservation.down.sql  20230526054703_reservation.up.sql  20230526054722_reservation_change.up.sql  20230526054732_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0001-core-reservation.md  template.md
service/: Cargo.toml
service/fitures/: config.yml
service/src/: lib.rs  main.rs  service.rs  test_utils.rs
service/tests/: service.rs
