[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
derive_builder = "0.12.0"
prost = "0.11.9"
prost-types = "0.11.9"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.40"
tonic = { version = "0.9.2", features = ["gzip"] }

[build-dependencies]
proto-builder-trait = { version = "0.5.1", features = ["tonic", "tonic-build"] }
tonic-build = "0.9.2"
