[package]
name = "reservation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.68"
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
futures = { version = "0.3.28", default-features = false }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["sync"] }
tracing = "0.1.37"

[dev-dependencies]
dotenv = "0.15.0"
prost-types = "0.11.9"
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
tokio = { version = "1.28.1", features = ["full"] }
xsqlx-db-tester = "0.1.3"
