[package]
name = "reservation-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.71"
futures = { version = "0.3.28", default-features = false }
reservation = { version = "0.1.0", path = "../reservation" }
shellexpand = "3.1.0"
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.9.2"
