[package]
name = "reservation-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
test_utils = []

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.71"
futures = { version = "0.3.28", default-features = false }
reservation = { version = "0.1.0", path = "../reservation" }
shellexpand = "3.1.0"
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.9.2"

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
uuid = "1.3.3"
xsqlx-db-tester = "0.1.3"
